<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Washington D.C. Metro Schedules:</string>
    <string name="app_name">d.c. metro</string>
    <string name="GPS_closest">Closest Station</string>
    <string name="GPS_closest_bus">Closest Bus</string>
    <string name="about">About</string>
    <string name="settings">Settings...</string>
    <string name="voice">voice</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Don\'t Accept</string>
    <string name="status">Status</string>
    <string name="THIRTY">30 seconds</string>
    <string name="FORTYFIVE">45 seconds</string>
    <string name="SIXTY">60 seconds</string>
    <string name="METRIC">Metric</string>
    <string name="STANDARD">Standard</string>
    <string name="TABLE">Tabular</string>
    <string name="TEXT">Text</string>
    <string name="SHOW">Show system delays</string>
    <string name="HIDE">Hide system delays</string>	
    <string name="SHOW_BUS">Show Bus option on startup</string>
    <string name="HIDE_BUS">Hide Bus option on startup</string>
    <string name="WALK">Walk</string>
    <string name="DRIVE">Drive</string>
    <string name="TRANSIT">Mass Transit</string>
    <string name="REMOTE_STATUS_WEBSITE">[insert your webpage for remote status updates here]</string>
    <string name="WMATA_KEY">[insert your key here]</string>

	
</resources>
